--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,7 +76,7 @@ h1 {
  
     border: none;
     position: relative;
-    bottom: 13px;
+    top: -13px;
     height: 17px;
     padding: 10px 0px;
     
