--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,7 +76,7 @@ h1 {
  
     border: none;
     position: relative;
-    top: -13px;
+    top: 2px;
     height: 17px;
     padding: 10px 0px;
     
@@ -89,6 +89,7 @@ h1 {
     position: relative;
     bottom: 1px;
     padding: 5px;
+    display: none;
 
 }
 
@@ -99,6 +100,7 @@ h1 {
     bottom: 1px;
     padding: 5px;
     margin-right: 4px;
+    display: none;
 
     
 }
