--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,7 +76,7 @@ h1 {
  
     border: none;
     position: relative;
-    top: 2px;
+    top: -13px;
     height: 17px;
     padding: 10px 0px;
     
@@ -89,18 +89,18 @@ h1 {
     position: relative;
     bottom: 1px;
     padding: 5px;
-    display: none;
+    display: inline;
 
 }
 
 #key {
+    display: inline;
     font-size: 35px;
     color: white;
     position: relative;
     bottom: 1px;
     padding: 5px;
     margin-right: 4px;
-    display: none;
 
     
 }
