--- a/estilos/style.css
+++ b/estilos/style.css
@@ -78,7 +78,10 @@ h1 {
     position: relative;
     top: -13px;
     height: 17px;
-    padding: 10px 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 35px;
+    
     
 }
 
