--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,10 +76,9 @@ h1 {
  
     border: none;
     position: relative;
-    top: -13px;
-    height: 17px;
-    padding-top: 10px;
-    padding-bottom: 10px;  
+    top: -12.5px;
+    height: 91%;
+
     width: 78%;
     
 }
