--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,9 +76,10 @@ h1 {
  
     border: none;
     position: relative;
-    top: -30%;
-    height: 91%;
-
+    top: -13px;
+    height: 17px;
+    padding-top: 10px;
+    padding-bottom: 10px;  
     width: 78%;
     
 }
