--- a/estilos/style.css
+++ b/estilos/style.css
@@ -72,14 +72,10 @@ h1 {
     background-color: #94CFCD ;
     border-radius: 8px;
     font-size: 1em;
-    
- 
     border: none;
     position: relative;
-    top: -13px;
-    height: 17px;
-    padding-top: 10px;
-    padding-bottom: 10px;  
+    top: -30%;
+    height: 91%;
     width: 78%;
     
 }
