--- a/estilos/style.css
+++ b/estilos/style.css
@@ -98,9 +98,9 @@ h1 {
     font-size: 35px;
     color: white;
     position: relative;
-    bottom: 1px;
+    bottom: 1%;
     padding: 5px;
-    margin-right: 4px;
+    margin-right: 5px;
 
     
 }
