--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,7 +44,6 @@ fieldset {
     width: 250px;
     border-radius: 20px;
 }
-
     
 
 
@@ -60,15 +59,11 @@ h1 {
     margin: 10px;
 }
 
-#container {
-    height: 100px;
-}
-
 .caixa {
     background-color: #5F2C82;
     margin: 5px 10px;
     border-radius: 8px;
-    height: 41%;
+    height: 41px;
     position: relative;
 
 }
@@ -77,10 +72,13 @@ h1 {
     background-color: #94CFCD ;
     border-radius: 8px;
     font-size: 1em;
+    
+ 
     border: none;
     position: relative;
     top: -30%;
     height: 91%;
+
     width: 78%;
     
 }
@@ -94,7 +92,7 @@ h1 {
     font-size: 35px;
     color: white;
     position: relative;
-    bottom: 1px;
+    bottom: 1%;
     padding: 5px;
 
 }
@@ -112,7 +110,6 @@ h1 {
 
 #pentrar {
     margin: 5px 10px;
-    margin-top: -8px;
     text-align: center;
     border-radius: 8px;
     background-color: #53AAA7;
