--- a/estilos/style.css
+++ b/estilos/style.css
@@ -98,11 +98,11 @@ h1 {
 }
 
 #key {
-    font-size: 250%;
+    font-size: 251%;
     color: white;
     position: relative;
-    bottom: 2%;
-    padding: 5px;
+    bottom: 5%;
+    padding: 2.1%;
    
 
     
