--- a/estilos/style.css
+++ b/estilos/style.css
@@ -77,13 +77,13 @@ h1 {
     border: none;
     position: relative;
     top: -30%;
-    height: 91%;
+    
 
-    width: 78%;
+    width: 79%;
     
 }
 
-.caixa > input:active {
+.caixa > input:focus {
     background-color: white;
 }
 
@@ -103,7 +103,6 @@ h1 {
     position: relative;
     bottom: 1px;
     padding: 5px;
-    margin-right: 5px;
 
     
 }
