--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,8 +20,9 @@ section {
 
 #imagem {
     
-    height: 200px;
-    width: 252px;
+    height: 210px;
+    margin-top: -4px;
+    
     background-image: url(../imagens/pexels-vinícius-estevão-2896034.jpg);
     background-repeat: no-repeat;
     background-position: center center;
@@ -40,23 +41,30 @@ fieldset {
     left: 50%;
     transform: translate(-50%,-50%);
     border: none;
-    background-color: white;
     width: 250px;
+    height: 515px;
     border-radius: 20px;
+    background-color: white;
+    padding: 4px 0px ;
+    border-bottom-left-radius: 20px ;
+    border-bottom-right-radius: 20px;
+    box-shadow: 1px 4px 7px rgba(0, 0, 0, 0.564);
+    transition: width .3s, height .3s;
 }
-    
+
+
 
 
 
 h1 {
 
     text-align: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 #texto {
     font-size: small;
-    margin: 10px;
+    margin: 5px 10px;
 }
 
 .caixa {
@@ -65,6 +73,7 @@ h1 {
     border-radius: 8px;
     height: 41px;
     position: relative;
+    display: block;
 
 }
 
@@ -80,7 +89,7 @@ h1 {
     top: -31%;
     
 
-    width: 79%;
+    width: calc(98% - 45px);;
     height: 80%;
     
 }
@@ -158,7 +167,9 @@ a.botao:hover {
 }
 
 
-
+body {
+    transition: () ;
+}
 
 
 
